Beautify the implementation of CARGO-1609 in Java 17 onwards - Though the beauty remains disputable as there are many classes and methods missing in Java 8 hence we have quite some introspection and hardcoded class names